# ADIOS2

./: CMakeLists.txt  aaargh.cmake  aaargh.sh  aaargh_clang_tidy.cmake  aaargh_memcheck_coverage.cmake  adios_common.cmake
bindings/CXX11/: CMakeLists.txt  adios2.h
bindings/CXX11/adios2/cxx11/: Variable.cpp  Variable.h
bindings/CXX11/cxx11/: Engine.h  Engine.tcc  IO.h
bindings/Python/: py11Engine.cpp  py11Engine.h  py11File.cpp  py11File.h  py11File.tcc  py11glue.cpp
bindings/Python/eco/: py11glue_eco.cpp
bindings/Python/eco/file_system/: py11FileSystem.h
cmake/: ADIOS2ConfigCommon.cmake.in  ADIOSFunctions.cmake  DetectOptions.cmake  FindLustre.cmake  FindRapidJSON.cmake  Findpugixml.cmake
examples/basics/: CMakeLists.txt
examples/basics/vis/: CMakeLists.txt  visSimpleTemperature.cpp  visTemperatureIsoSurface.cpp
examples/heatTransfer/: heat_bpfile.xml
examples/heatTransfer/write/: HeatTransfer.cpp  config.xml  main.cpp
examples/hello/bpViz/: CMakeLists.txt  helloBPVizWriter.cpp
examples/hello/bpWriter/: CMakeLists.txt  helloBPLustre.cpp
scripts/conda/adios2/: build.sh  meta.yaml  meta_mpich.yaml  meta_nompi.yaml  meta_openmpi.yaml
source/adios2/: ADIOSConfig.h.in  ADIOSMPI.h  ADIOSTypes.h  CMakeLists.txt
source/adios2/common/: ADIOSTypes.h
source/adios2/core/: ADIOS.cpp  ADIOS.h  IO.cpp  IO.h  IO.tcc  Transform.cpp  Transform.h  VariableBase.cpp  VariableBase.h
source/adios2/eco/: EcoSystem.cpp  EcoSystem.h
source/adios2/helper/: adiosMemory.h  adiosMemory.inl  adiosString.cpp  adiosString.h
source/utils/: CMakeLists.txt
(+65 files in other folders)
